--- a/arima.ipynb
+++ b/arima.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ayush\\AppData\\Local\\Temp\\ipykernel_15368\\839530234.py:13: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df['prices.dateSeen'] = pd.to_datetime(df['prices.dateSeen'], errors=\"coerce\")\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -40,13 +48,14 @@
     "# Converting dates immediately for feature engineering\n",
     "df['dateUpdated'] = pd.to_datetime(df['dateUpdated'])\n",
     "df['dateAdded'] = pd.to_datetime(df['dateAdded'])\n",
+    "df['prices.dateSeen'] = pd.to_datetime(df['prices.dateSeen'], errors=\"coerce\")\n",
     "\n",
     "print(f\"Successfully loaded {len(df)} records from ElectronicsProductsPricingData.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +79,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>dateUpdated</th>\n",
+       "      <th>prices.dateSeen</th>\n",
        "      <th>day_of_week</th>\n",
        "      <th>week_of_year</th>\n",
        "      <th>is_thursday</th>\n",
@@ -79,71 +88,121 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2018-05-12 18:59:48+00:00</td>\n",
-       "      <td>5</td>\n",
-       "      <td>19</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2018-06-13 19:39:02+00:00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2017-12-14 06:00:00+00:00</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2018-06-13 19:39:02+00:00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2017-09-08 05:00:00+00:00</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>36</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2018-06-13 19:39:02+00:00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2017-10-10 05:00:00+00:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2018-06-13 19:39:02+00:00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2017-08-28 07:00:00+00:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>35</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7244</th>\n",
+       "      <td>2017-10-10 08:00:00+00:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7245</th>\n",
+       "      <td>2018-06-01 12:00:00+00:00</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7246</th>\n",
+       "      <td>2017-05-18 05:00:00+00:00</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7247</th>\n",
+       "      <td>2017-08-28 11:00:00+00:00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>35</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7248</th>\n",
+       "      <td>2017-06-25 12:00:00+00:00</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>7249 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                dateUpdated  day_of_week  week_of_year  is_thursday\n",
-       "0 2018-05-12 18:59:48+00:00            5            19            0\n",
-       "1 2018-06-13 19:39:02+00:00            2            24            0\n",
-       "2 2018-06-13 19:39:02+00:00            2            24            0\n",
-       "3 2018-06-13 19:39:02+00:00            2            24            0\n",
-       "4 2018-06-13 19:39:02+00:00            2            24            0"
+       "               prices.dateSeen  day_of_week  week_of_year  is_thursday\n",
+       "0                          NaT          NaN          <NA>        False\n",
+       "1    2017-12-14 06:00:00+00:00          3.0            50         True\n",
+       "2    2017-09-08 05:00:00+00:00          4.0            36        False\n",
+       "3    2017-10-10 05:00:00+00:00          1.0            41        False\n",
+       "4    2017-08-28 07:00:00+00:00          0.0            35        False\n",
+       "...                        ...          ...           ...          ...\n",
+       "7244 2017-10-10 08:00:00+00:00          1.0            41        False\n",
+       "7245 2018-06-01 12:00:00+00:00          4.0            22        False\n",
+       "7246 2017-05-18 05:00:00+00:00          3.0            20         True\n",
+       "7247 2017-08-28 11:00:00+00:00          0.0            35        False\n",
+       "7248 2017-06-25 12:00:00+00:00          6.0            25        False\n",
+       "\n",
+       "[7249 rows x 4 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "from itertools import count\n",
+    "# 2. Extract features\n",
+    "df['day_of_week'] = df['prices.dateSeen'].dt.dayofweek\n",
+    "df['month'] = df['prices.dateSeen'].dt.month\n",
+    "df['week_of_year'] = df['prices.dateSeen'].dt.isocalendar().week\n",
     "\n",
+    "# 3. Binary flag (Converted to 1/0 for the model)\n",
+    "df['is_thursday'] = (df['day_of_week'] == 3)\n",
     "\n",
-    "df['day_of_week'] = df['dateUpdated'].dt.dayofweek\n",
-    "df['month'] = df['dateUpdated'].dt.month\n",
-    "df['week_of_year'] = df['dateUpdated'].dt.isocalendar().week.astype(int)\n",
-    "\n",
-    "# Binary flag for Thursday updates\n",
-    "df['is_thursday'] = (df['day_of_week'] == 3).astype(int)\n",
-    "\n",
-    "# Preview the engineered features\n",
-    "df[['dateUpdated', 'day_of_week', 'week_of_year', 'is_thursday']].head()\n"
+    "# Preview\n",
+    "df[['prices.dateSeen', 'day_of_week', 'week_of_year', 'is_thursday']]\n",
+    "\n"
    ]
   },
   {
@@ -210,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -236,8 +295,6 @@
     }
    ],
    "source": [
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.figure(figsize=(8, 5))\n",
     "sns.countplot(x='is_discounted', data=df, palette='Set2')\n",
