new change had been made

--- a/arima.ipynb
+++ b/arima.ipynb
@@ -66,6 +66,7 @@
     "df = df[df[\"prices.dateSeen\"].dt.year == 2017]\n",
     "\n",
     "mlflow.end_run()\n",
+    "mlflow.set_tracking_uri('http://localhost:5050')\n",
     "\n",
     "\n",
     "df[[\"discount_percent\",\"prices.amountMax\",\"prices.dateSeen\",\"prices.amountMin\"]].head()"
@@ -596,12 +597,18 @@
     "mlflow.end_run()\n",
     "mlflow.set_experiment(\"ARIMA_Discount_Model\")\n",
     "\n",
-    "for p in range(3):\n",
+    "best_rmse = float(\"inf\")\n",
+    "best_aic = float(\"inf\")\n",
+    "best_model = None\n",
+    "best_params = None\n",
+    "\n",
+    "for p in range(1,4):\n",
     "    for d in range(2):\n",
     "        for q in range(3):\n",
     "\n",
     "            with mlflow.start_run():\n",
     "\n",
+    "                # Log parameters\n",
     "                mlflow.log_param(\"p\", p)\n",
     "                mlflow.log_param(\"d\", d)\n",
     "                mlflow.log_param(\"q\", q)\n",
@@ -610,18 +617,39 @@
     "                model_fit = model.fit()\n",
     "\n",
     "                forecast = model_fit.forecast(len(test))\n",
-    "                \n",
-    "                rmse = np.sqrt(mean_squared_error(test[\"discount_percent\"], forecast))\n",
     "\n",
-    "                mlflow.log_metric(\"rmse\", rmse)\n",
-    "                mlflow.log_metric(\"aic\", model_fit.aic)\n",
+    "                rmse = np.sqrt(\n",
+    "                    mean_squared_error(\n",
+    "                        test[\"discount_percent\"], forecast\n",
+    "                    )\n",
+    "                )\n",
     "\n",
-    "                # save model\n",
-    "                import pickle\n",
-    "                with open(\"arima.pkl\", \"wb\") as f:\n",
-    "                    pickle.dump(model_fit, f)\n",
+    "                aic = model_fit.aic\n",
     "\n",
-    "                mlflow.log_artifact(\"arima.pkl\")"
+    "                # ✅ ALWAYS log metrics\n",
+    "                mlflow.log_metric(\"RMSE\", rmse)\n",
+    "                mlflow.log_metric(\"AIC\", aic)\n",
+    "\n",
+    "                # ✅ Update best model OUTSIDE logging logic\n",
+    "                if (rmse < best_rmse) or (rmse == best_rmse and aic < best_aic):\n",
+    "                    best_rmse = rmse\n",
+    "                    best_aic = aic\n",
+    "                    best_model = model_fit\n",
+    "                    best_params = (p,d,q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open(\"best_arima_model.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(best_model, f)\n",
+    "\n",
+    "mlflow.log_artifact(\"best_arima_model.pkl\")"
    ]
   },
   {
@@ -630,8 +658,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "forecast.head()"
+    "mlflow.end_run()\n",
+    "with mlflow.start_run(run_name=\"Best_Model\"):\n",
+    "\n",
+    "    mlflow.log_param(\"best_p\", best_params[0])\n",
+    "    mlflow.log_param(\"best_d\", best_params[1])\n",
+    "    mlflow.log_param(\"best_q\", best_params[2])\n",
+    "\n",
+    "    mlflow.log_metric(\"best_RMSE\", best_rmse)\n",
+    "    mlflow.log_metric(\"best_AIC\", best_aic)\n",
+    "\n",
+    "    mlflow.log_artifact(\"best_arima_model.pkl\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
